# CSnake

./: .gitattributes  .gitignore  .gitignore_global  .project  .pydevproject  .travis.yml  CSnake.launch  CSnakeAllTests.launch  GlobDirectoryWalker.py  Jenkinsfile  OrderedSet.py  RollbackImporter.py  Win32Header.h  createWindowsExecutable.bat  csnBuild.py  csnCilab.py  csnCompiler.py  csnConsole.py  csnGUI.py  csnGUI.wxg  csnGUIHandler.py  csnGUIOptions.py  csnGUIOptions.wxg  csnGUISelectProjects.py  csnKDevelop.py  csnPostProcessorForKDevelop.py  csnPostProcessorForVisualStudio.py  csnPrebuilt.py  csnStandardModules.py  csnUtility.py  csnVisualStudio2003.py  gbBuild.py  gbStandardModules.py  license.txt  preferences.epf  readme.md  readme.txt  setup.py
TemplateSourceFiles/: csnake_dummy.cpp  normalRunner.tpl  wxRunner.tpl  xmlRunner.tpl
Test/: csnBuildTest.py  csnGUIHandlerTest.py  test.bat  testGUI.bat
db/: uuid
doc/: Doxyfile.doxy  MainPage.dox  Modules.dox  folder_struct.dox  licence.dox  project_config.dox  readme.dox
resources/: Win32Header.h  Win32Header.lib.h  about.txt  createWindowsExecutable.bat  csnGUI.xrc  csnake_dummy.cpp  license.txt  logging.conf  normalRunner.tpl  readme.txt  wxRunner.tpl  xmlRunner.tpl
src/: GlobDirectoryWalker.py  OrderedSet.py  RollbackImporter.py  __init__.py  about.py  build.py  csnAPIImplementation.py  csnAPIPublic.py  csnBuild.py  csnCMake.py  csnCilab.py  csnCompile.py  csnCompiler.py  csnConsole.py  csnContext.py  csnContextConverter.py  csnCreate.py  csnDependencies.py  csnGUI.fbp  csnGUI.py  csnGUI.wxg  csnGUI.xrc  csnGUIHandler.py  csnGUIOptions.py  csnGUISelectProjects.py  csnGUISelectProjects.wxg  csnGenerator.py  csnInstall.py  csnKDevelop.py  csnLinuxCommon.py  csnListener.py  csnNMake.py  csnPrebuilt.py  csnProject.py  csnProjectPaths.py  csnStandardModuleProject.py  csnTests.py  csnUtility.py  csnVersion.py  csnVisualStudio2003.py  (+9 more)
tests/: .gitignore  AllTests.bat  AllTests.py  AllTests.sh  BuildTest.py  TestProjectConfig.py  aboutTests.py  context.txt  context00a.txt  context10a.txt  context20.txt  context20a.txt  (+22 more)
tests/data/third party/Four/: CMakeLists.txt  FourConfig.cmake.in  UseFour.cmake.in  csnFour.py
tests/data/third party/Four/src/: CMakeLists.txt
tests/data/thirdParty2/: CMakeLists.txt
tests/data/thirdParty2/Five/: CMakeLists.txt  FiveConfig.cmake.in  UseFive.cmake.in  csnFive.py
tests/data/thirdParty2/Five/src/: CMakeLists.txt  Five.cpp  Five.h
tests/data/thirdParty2/Four/: CMakeLists.txt  csnFour.py
tests/data/thirdParty2/Four/src/: CMakeLists.txt  Four.cpp  Four.h
(+83 files in other folders)
